data/derived/comb/progs/unify/prog5230.ml.out
Characters 237-249:
  let (carry', digits') = if (sec' = 1) then (1, (fst', sec') @ digits') else (0, (fst', sec') @ digits') in 
                                                 ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
